--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "azure-function-with-docker",
   "version": "1.0.0",
   "description": "",
   "main": "dist/src/functions/*.js",
@@ -12,7 +12,7 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
-    "@azure/functions": "^4.0.0-alpha.9"
+    "@azure/functions": "4.1.0"
   },
   "devDependencies": {
     "azure-functions-core-tools": "^4.x",
