--- a/package.json
+++ b/package.json
@@ -10,15 +10,22 @@
     "clean": "rimraf dist",
     "prestart": "npm run clean && npm run build",
     "start": "func start",
+    "lint": "prettier --write --cache . && eslint --fix --cache",
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
     "@azure/functions": "4.1.0",
-    "@azure/storage-blob": "^12.17.0"
+    "@azure/storage-blob": "^12.17.0",
+    "prettier": "^3.2.5"
   },
   "devDependencies": {
     "@types/node": "18.x",
     "azure-functions-core-tools": "^4.x",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-simple-import-sort": "12.0.0",
+    "eslint-plugin-unused-imports": "3.1.0",
     "rimraf": "^5.0.0",
     "typescript": "^4.0.0"
   }
