--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "prestart": "npm run clean && npm run build",
     "start": "func start",
     "lint": "prettier --write --cache . && eslint --fix --cache",
-    "test": "echo \"No tests yet...\""
+    "test": "echo \"No tests yet...\"",
+    "prepare": "husky"
   },
   "dependencies": {
     "@azure/functions": "4.1.0",
@@ -26,6 +27,7 @@
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-simple-import-sort": "12.0.0",
     "eslint-plugin-unused-imports": "3.1.0",
+    "husky": "^9.0.11",
     "rimraf": "^5.0.0",
     "typescript": "^4.0.0"
   }
