--- a/src/health/package.json
+++ b/src/health/package.json
@@ -1,9 +1,17 @@
 {
-  "name": "public",
+  "name": "health",
   "version": "1.0.0",
   "description": "",
+  "main": "dist/health/functions/*.js",
   "scripts": {
+    "build": "tsc",
+    "build:clean": "rimraf dist",
+    "watch": "tsc -w",
+    "clean": "rimraf dist",
+    "prestart": "npm run clean && npm run build",
+    "start": "func start",
     "lint": "prettier --write --cache . && eslint --fix --cache",
+    "test": "echo \"No tests yet...\"",
     "prepare": "husky"
   },
   "dependencies": {
