--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "@azure/functions": "4.1.0",
     "@azure/storage-blob": "^12.17.0",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "stream-to-string": "^1.2.1"
   },
   "devDependencies": {
     "@types/node": "18.x",
